data/derived/fa15/progs/unify/prog3055.ml.out
Characters 92-113:
  | h::t -> (h * i + c) mod 10::t in
            ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
